[project]
name = "watchy"
version = "0.1.0"
description = "FastAPI application for tracking footage files with watchdog and SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "watchdog>=3.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "requests>=2.31.0",
]
